# wyrdbound-systems

./: .gitignore  CODECOV_INTEGRATION.md  COVERAGE.md  GITHUB_COVERAGE_SETUP.md  LICENSE  README.md  analyze_coverage.py  coverage_badge.py  github_coverage_report.py  pyproject.toml
grimoire-runner/: .coverage  .coveragerc  README.md  TEST_COVERAGE_IMPROVEMENT_PLAN.md  codecov_analysis.md  coverage.sh  coverage.xml  pyproject.toml  pytest.ini  test_derived_verification.py  vulture_whitelist.py
grimoire-runner/examples/: README.md  advanced_flow.py  basic_flow_test.py  browse_compendium.py  interactive_repl.py
grimoire-runner/src/grimoire_runner/: __init__.py
grimoire-runner/src/grimoire_runner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
grimoire-runner/src/grimoire_runner/core/: __init__.py  context.py  engine.py  loader.py
grimoire-runner/src/grimoire_runner/executors/: __init__.py  action_executor.py  action_strategies.py  base.py  choice_executor.py  conditional_executor.py  dice_executor.py  executor_factories.py  executor_factory.py  flow_executor.py  flow_helper.py  llm_executor.py  player_input_executor.py  table_executor.py
grimoire-runner/src/grimoire_runner/integrations/: __init__.py  dice_integration.py  llm_integration.py  rng_integration.py
grimoire-runner/src/grimoire_runner/models/: __init__.py  compendium.py  context_data.py  flow.py  flow_namespace.py  model.py  observable.py  prompt.py  roll_result.py  source.py  step.py  system.py  table.py  template_resolver.py
grimoire-runner/src/grimoire_runner/services/: __init__.py  flow_execution_context_manager.py  path_resolver.py  template_service.py
grimoire-runner/src/grimoire_runner/ui/: __init__.py  browser.py  cli.py  interactive.py  rich_browser.py  rich_tui.py  simple_textual.py  textual_app.py  textual_browser.py  textual_executor.py
grimoire-runner/src/grimoire_runner/utils/: __init__.py  logging.py  serialization.py  templates.py
grimoire-runner/tests/: README.md  TESTING_ANALYSIS.md  TESTING_STRATEGY.md  conftest.py  test_base_executor.py  test_basic.py  test_basic_modal.py  test_choice_executor_comprehensive.py  test_choice_template_fix.py  test_cli_interface.py  test_compendium_model.py  test_compendium_table_definitions.py  test_comprehensive_models.py  test_conditional_executor.py  test_dice_executor_extended.py  test_engine_actions.py  test_engine_extended.py  test_executors.py  test_factory_pattern.py  test_flow_call_step.py  test_flow_definitions.py  test_flow_execution.py  test_focused_coverage.py  test_grimoire_engine.py  test_isolated_models.py  test_llm_integration.py  test_llm_validation.py  test_log_event_template_resolution.py  test_log_message_formatting.py  test_modal_debug.py  test_model_definitions.py  test_model_extended.py  test_nested_flow_execution.py  test_observable_extended.py  test_player_input_executor.py  test_rng_integration.py  test_serialization_extended.py  test_simple_check.py  test_source_model.py  test_source_prompt_definitions.py  (+13 more)
grimoire-runner/tests/systems/compendium_table_integration/: system.yaml
grimoire-runner/tests/systems/compendium_table_integration/compendium/: starting_gear.yaml
grimoire-runner/tests/systems/compendium_table_integration/models/: gear.yaml
grimoire-runner/tests/systems/compendium_test/: system.yaml
grimoire-runner/tests/systems/compendium_test/compendium/: basic_items.yaml  basic_weapons.yaml
grimoire-runner/tests/systems/compendium_test/models/: basic_item.yaml
grimoire-runner/tests/systems/currency_test/: system.yaml
grimoire-runner/tests/systems/flow_test/: system.yaml
grimoire-runner/tests/systems/flow_test/flows/: basic-flow.yaml  choice-flow.yaml  complex-flow.yaml  dice-flow.yaml  enum-flow.yaml  llm-flow.yaml  table-flow.yaml  test_level_2_flow.yaml  test_level_3_flow.yaml  test_nested_flow_calls.yaml
grimoire-runner/tests/systems/flow_test/models/: character.yaml
grimoire-runner/tests/systems/llm_validation_test/: system.yaml
grimoire-runner/tests/systems/llm_validation_test/flows/: test_json_validation.yaml  test_log_event_template_resolution.yaml  test_schema_validation.yaml  test_validation_fallback.yaml
grimoire-runner/tests/systems/minimal_basic/: system.yaml
grimoire-runner/tests/systems/model_inheritance/: system.yaml
grimoire-runner/tests/systems/model_inheritance/models/: base_entity.yaml  character.yaml
grimoire-runner/tests/systems/model_types/: system.yaml
grimoire-runner/tests/systems/model_types/models/: basic_character.yaml  item.yaml
grimoire-runner/tests/systems/model_validations/: system.yaml
grimoire-runner/tests/systems/model_validations/models/: validated_character.yaml
grimoire-runner/tests/systems/prompt_test/: system.yaml
grimoire-runner/tests/systems/prompt_test/prompts/: complex-prompt.yaml
grimoire-runner/tests/systems/source_prompt_integration/: system.yaml
grimoire-runner/tests/systems/source_prompt_integration/sources/: integration-source.yaml
grimoire-runner/tests/systems/source_test/sources/: test-source.yaml
grimoire-runner/tests/systems/table_entry_types/: system.yaml
grimoire-runner/tests/systems/table_entry_types/compendium/: items.yaml  weapons.yaml
grimoire-runner/tests/systems/table_entry_types/models/: armor.yaml  weapon.yaml
grimoire-runner/tests/systems/table_entry_types/tables/: basic-items.yaml  starting-gear.yaml  string-table.yaml
grimoire-runner/tests/systems/table_test/: system.yaml
grimoire-runner/tests/systems/table_test/tables/: complex_results.yaml  range_table.yaml
grimoire-runner/tests_new/: TESTING_STRATEGY.md  conftest.py  test_compendium_table_definitions.py  test_flow_definitions.py  test_flow_execution.py  test_llm_integration.py  test_llm_integration_mocked.py  test_model_definitions.py  test_source_prompt_definitions.py  test_system_loading.py  test_table_entry_types.py
grimoire-runner/tests_new/systems/compendium_test/models/: weapon.yaml
grimoire-runner/tests_new/systems/credits_test/: system.yaml
grimoire-runner/tests_new/systems/source_test/: system.yaml
(+83 files in other folders)
