[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grimoire-runner"
version = "0.1.0"
description = "Interactive testing and development tool for GRIMOIRE tabletop RPG systems"
readme = "README.md"
authors = [
    {name = "Wyrdbound Systems", email = "contact@wyrdbound.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Role-Playing"
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "textual>=0.85.0",
    "typer[all]>=0.9",
    "langchain>=0.1",
    "langchain-anthropic>=0.1",
    "wyrdbound-dice>=0.0.1",
    "wyrdbound-rng>=0.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
    "pre-commit>=3.0"
]

[project.scripts]
grimoire-runner = "grimoire_runner.ui.cli:main"

[project.urls]
Homepage = "https://github.com/wyrdbound/wyrdbound-systems"
Repository = "https://github.com/wyrdbound/wyrdbound-systems"
Issues = "https://github.com/wyrdbound/wyrdbound-systems/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=grimoire_runner --cov-report=term-missing --cov-report=html --cov-report=xml"

[tool.coverage.run]
source = ["src/grimoire_runner"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
